# docker-and-gh-actions-for-ml

./: .gitignore  Dockerfile  README.md  azure.env.example  create-sp.sh  licence  mkdocs.yml  netlify.toml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
docs/: 0-installing-dependencies.md  0-setup.md  1-creating-rest-api.md  1-installing-dependencies.md  1-setting-up-git-flow.md  2-containerising-it.md  2-my-first-feature-branch.md  2-setting-up-git-flow.md  3-cicd-with-github-actions.md  3-containerise-it.md  3-deploying-to-azure.md  3-my-first-feature-branch.md  4-containerise-it.md  4-continuous-integration.md  4-deploying-to-azure.md  4-github-actions-cd.md  5-continuous-deployment.md  5-continuous-integration.md  6-bonus-git-internals.md  6-continuous-deployment.md  997-containerise-it.md  998-continuous-deployment.md  999 - continuous integration.md  bonus - git internals.md  index.md  next-steps.md  styles.css  troubleshooting.md
docs/images/1-creating-rest-api/: codespaces-click-local-port.xcf
docs/images/4-deploying-to-azure/: repo-add-secret.xcf  repo-added-secret.xcf
src/distilgpt2_api/: __main__.py  api.py  text_generation.py
tests/: test_text_generation.py
