[project]
name = "distilgpt2-api"
version = "0.2.0"
description = "Text generation with DistilGPT2 as a REST API."
license = { text = "MIT" }
authors = [
    { name = "Drew Silcock", email = "drew.silcock@stfc.ac.uk" },
    { name = "Daniel Clayton", email = "daniel.clayton@stfc.ac.uk" },
]
maintainers = [
    { name = "Drew Silcock", email = "drew.silcock@stfc.ac.uk" },
    { name = "Daniel Clayton", email = "daniel.clayton@stfc.ac.uk" },
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.136.1,<0.137",
    "gunicorn>=26.0.0,<27",
    "transformers>=5.8.1,<6",
    "uvicorn[standard]>=0.46.0,<0.47",
    "torch>=2.11.0,<2.12",
]

[dependency-groups]
dev = [
    "black>=24.4.2,<25",
    "mypy>=1.11.0,<2",
    "pytest>=8.3.2,<9",
    "ruff>=0.5.5,<0.6",
    "poethepoet>=0.27.0,<0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/distilgpt2_api"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff.lint]
ignore = ["E501"]
select = ["I", "E", "N"]

[tool.mypy]
python_version = "3.14"
exclude = ['\.venv']
warn_return_any = true
warn_unused_configs = true

# Pydantic required config, see
# https://docs.pydantic.dev/latest/integrations/mypy/#enabling-the-plugin
# I've relaxed these a bit to make it less annoying to the workshop attendees who have
# to fix them, which isn't the focus of the workshop.
check_untyped_defs = true
disallow_any_generics = false
disallow_untyped_defs = false
follow_imports = "silent"
no_implicit_reexport = true
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.poe.tasks]
_black_check = "black --check src tests"
_mypy_check = "mypy src tests"
_ruff_check = "ruff check src tests"

_black_fix = "black src tests"
_ruff_fix = "ruff check --fix-only --exit-zero src tests"

_test = "pytest --verbose"
_test_with_output = "pytest --verbose --capture=no"

[tool.poe.tasks.api]
help = "Run the API"
cmd = "uvicorn distilgpt2_api.api:app --reload"

[tool.poe.tasks.lint]
help = "Run all linters"
sequence = ["_black_check", "_ruff_check", "_mypy_check"]

[tool.poe.tasks.format]
help = "Run all formatters"
sequence = ["_ruff_fix", "_black_fix"]

[tool.poe.tasks.test]
help = "Run all tests"
sequence = ["_test"]

[tool.poe.tasks.test-with-output]
help = "Run all tests (show output from tests)"
sequence = ["_test_with_output"]

[tool.poe.tasks.precommit]
help = "Run all formatting tasks followed by all linting tasks."
sequence = ["format", "lint"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["transformers"]
