[project]
name = "distilgpt2-api"
version = "0.2.0"
description = "Text generation with DistilGPT2 as a REST API."
license = { text = "MIT" }
authors = [
    { name = "Drew Silcock", email = "drew.silcock@stfc.ac.uk" },
    { name = "Daniel Clayton", email = "daniel.clayton@stfc.ac.uk" },
]
maintainers = [
    { name = "Drew Silcock", email = "drew.silcock@stfc.ac.uk" },
    { name = "Daniel Clayton", email = "daniel.clayton@stfc.ac.uk" },
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.136.1,<0.137",
    "gunicorn>=26.0.0,<27",
    "transformers>=5.8.1,<6",
    "uvicorn[standard]>=0.46.0,<0.47",
    "torch>=2.11.0,<2.12",
]

[dependency-groups]
dev = [
    "ty>=0.0.35",
    "pytest>=9.0.3,<10",
    "ruff>=0.15.12,<0.16",
    "poethepoet>=0.45.0,<0.46",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/distilgpt2_api"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff.lint]
ignore = ["E501"]
select = ["I", "E", "N"]

[tool.poe.tasks]
_ruff_format_check = "ruff format --check src tests"
_ty_check = "ty check src tests"
_ruff_check = "ruff check src tests"

_ruff_format_fix = "ruff format src tests"
_ruff_fix = "ruff check --fix-only --exit-zero src tests"

_test = "pytest --verbose"
_test_with_output = "pytest --verbose --capture=no"

[tool.poe.tasks.api]
help = "Run the API"
cmd = "uvicorn distilgpt2_api.api:app --reload"

[tool.poe.tasks.lint]
help = "Run all linters"
sequence = ["_ruff_format_check", "_ruff_check", "_ty_check"]

[tool.poe.tasks.format]
help = "Run all formatters"
sequence = ["_ruff_fix", "_ruff_format_fix"]

[tool.poe.tasks.test]
help = "Run all tests"
sequence = ["_test"]

[tool.poe.tasks.test-with-output]
help = "Run all tests (show output from tests)"
sequence = ["_test_with_output"]

[tool.poe.tasks.precommit]
help = "Run all formatting tasks followed by all linting tasks."
sequence = ["format", "lint"]
